fixed layout issues

--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -37,16 +37,16 @@
 }
 
 .image-container {
-  position: relative; /* Make sure the container is positioned */
+  position: relative;
 }
 
 .overlay {
-  position: absolute; /* Position the overlay */
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100%; /* Cover the entire image */
-  height: 100%; /* Cover the entire image */
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); /* Gradient for the fade */
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
 }
 
 .carousel-item img {
@@ -61,6 +61,15 @@
   margin: 0 5px;
 }
 
+.contact-container {
+  max-width: 2000px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+
+}
 
 .contact-container ul {
   display: flex;
@@ -465,7 +474,7 @@ div {
 
 .map {
   border-radius: 10px;
-  overflow: hidden; /* Ensures the map stays within the rounded borders */
+  overflow: hidden;
   height: 100%;
 }
 
